# Elasticsearch_tutorial

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.csv
elk/elasticsearch/: dockerfile
elk/logstash/: dockerfile
elk/logstash/config/: logstash.yml
elk/logstash/pipeline/: logstash.conf
