[tool.poetry]
name = "elasticsearch-tutorial"
version = "0.1.0"
description = ""
authors = ["leon.huang <leon.huang@riversoft.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
elasticsearch = {version = "8.13", extras = ["async"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
